Openapi generator 7.0.1 (#1181)
* Openapi generator 7.0.0
Update libraries.
Removed redundant dependencies.
Update commons-codec to remove vulnerability

* Upgrade lib versions.
Code cleanup.