@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.annotation.processing.SupportedOptions;
 
@@ -187,7 +186,7 @@ public class OpenApiControllerVisitor extends AbstractOpenApiEndpointVisitor imp
         return Arrays.stream(values)
             .map(MediaType::of)
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
